# cupola

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md
crates/shared/: Cargo.toml
crates/shared/src/: accessibility.rs  cache.rs  grid_config.rs  image.rs  lib.rs  loading_state.rs  screen_reader_labels.rs  thumbnail_metadata.rs
crates/shared/tests/: performance.rs  test_cache.rs  test_privacy.rs  test_screen_reader.rs  test_thumbnail_scaling.rs
crates/viewer/: Cargo.toml
crates/viewer-config/: Cargo.toml
crates/viewer-config/src/: config.rs  lib.rs
crates/viewer-image/: Cargo.toml
crates/viewer-image/src/: cache.rs  image.rs  lib.rs  loader.rs
crates/viewer-image/src/edit/: mod.rs  state.rs
crates/viewer-nav/: Cargo.toml
crates/viewer-nav/src/: lib.rs  nav.rs
crates/viewer-types/: Cargo.toml
crates/viewer-types/src/: lib.rs  types.rs
crates/viewer-widgets/: Cargo.toml
crates/viewer-widgets/src/: crop_widget.rs  crop_widget_temp.rs  flex_grid_core.rs  gallery_grid.rs  lib.rs  thumbnail.rs
crates/viewer/src/: app.rs  key_binds.rs  localize.rs  main.rs  menu.rs  message.rs  thumbnail.rs  watcher.rs  widgets.rs
crates/viewer/src/views/: gallery.rs  image_view_state.rs
crates/viewer/src/widgets/: crop.rs
crates/viewer/src/widgets/crop/: widget.rs
data/: cosmic-viewer.desktop  cupola.desktop  org.codeberg.bhh32.Cupola.desktop  org.codeberg.bhh32.Cupola.meta.info.xml
i18n/cs/: cupola.ftl  viewer.ftl
i18n/en/: cosmic_viewer.ftl  viewer.ftl
i18n/pl/: cosmic_viewer.ftl
i18n/sv/: cosmic_viewer.ftl  viewer.ftl
src/: app.rs  config.rs  image.rs  key_binds.rs  localize.rs  main.rs  menu.rs  message.rs  nav.rs  views.rs  watcher.rs  widgets.rs
src/image/: cache.rs  loader.rs
src/views/: gallery.rs  image_view_state.rs  single.rs
src/widgets/: flex_grid.rs
src/widgets/flex_grid/: core.rs  gallery.rs  widget.rs
