[package]
name = "viewer-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "COSMIC Viewer configuration management"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
libcosmic.workspace = true
palette.workspace = true
