[package]
name = "viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "COSMIC Viewer - Main binary crate"

[[bin]]
name = "cupola"
path = "src/main.rs"

[dependencies]
# Internal crates
shared = { path = "../shared" }
viewer-config = { path = "../viewer-config" }
viewer-image = { path = "../viewer-image" }
viewer-nav = { path = "../viewer-nav" }
viewer-types = { path = "../viewer-types" }
viewer-widgets = { path = "../viewer-widgets" }

# External dependencies
ashpd.workspace = true
dirs.workspace = true
fast_image_resize.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
image.workspace = true
notify.workspace = true
once_cell.workspace = true
rfd.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json = "1.0"
tempfile = "3.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Libcosmic for main binary
libcosmic.workspace = true
trash.workspace = true

[features]
default = []
#heif = ["shared/heif"]
